# OpenGLCMake

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
src/: main.cpp
src/Candle/: Logger.cpp  Logger.h  cdpch.h
src/Candle/Core/: Base.h  Components.h  PlatformDetection.h  UUID.cpp  UUID.h
src/Candle/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Camera2D.cpp  Camera2D.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
src/Candle/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h
src/Engine/: Logger.h
